and more NN changes

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -995,6 +995,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Should have this separated or at least rename the data and models lol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### fashion MNIST"
    ]
   },
@@ -1077,10 +1084,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, kernel_size = (2,2), input_shape = input_shape))\n",
+    "model.add(MaxPooling2D(pool_size = (2,2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation = tf.nn.relu))\n",
+    "model.add(Dense(num_classes, activation = tf.nn.softmax))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.compile(optimizer = \"adam\", loss = \"sparse_categorical_crossentropy\", metrics = [\"accuracy\",\"categorical_accuracy\"])\n",
+    "model_history = model.fit(x_train_keras, y_train, epochs = 10, validation_split = 0.1, batch_size = 32)\n",
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
