adding not my project to take a look

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,13 +1117,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 54000 samples, validate on 6000 samples\n",
+      "Epoch 1/10\n",
+      "54000/54000 [==============================] - 31s 580us/sample - loss: 0.4228 - acc: 0.8479 - categorical_accuracy: 0.1032 - val_loss: 0.3155 - val_acc: 0.8848 - val_categorical_accuracy: 0.1015\n",
+      "Epoch 2/10\n",
+      "54000/54000 [==============================] - 31s 574us/sample - loss: 0.2977 - acc: 0.8910 - categorical_accuracy: 0.1009 - val_loss: 0.2899 - val_acc: 0.8945 - val_categorical_accuracy: 0.0965\n",
+      "Epoch 3/10\n",
+      "54000/54000 [==============================] - 31s 575us/sample - loss: 0.2536 - acc: 0.9065 - categorical_accuracy: 0.1005 - val_loss: 0.2813 - val_acc: 0.8953 - val_categorical_accuracy: 0.1157\n",
+      "Epoch 4/10\n",
+      "54000/54000 [==============================] - 32s 593us/sample - loss: 0.2214 - acc: 0.9178 - categorical_accuracy: 0.1011 - val_loss: 0.2650 - val_acc: 0.9032 - val_categorical_accuracy: 0.0913\n",
+      "Epoch 5/10\n",
+      "54000/54000 [==============================] - 32s 597us/sample - loss: 0.1961 - acc: 0.9275 - categorical_accuracy: 0.1005 - val_loss: 0.2606 - val_acc: 0.9058 - val_categorical_accuracy: 0.1028\n",
+      "Epoch 6/10\n",
+      "54000/54000 [==============================] - 32s 596us/sample - loss: 0.1742 - acc: 0.9348 - categorical_accuracy: 0.1005 - val_loss: 0.2801 - val_acc: 0.9040 - val_categorical_accuracy: 0.0955\n",
+      "Epoch 7/10\n",
+      "54000/54000 [==============================] - 32s 595us/sample - loss: 0.1558 - acc: 0.9416 - categorical_accuracy: 0.0998 - val_loss: 0.2772 - val_acc: 0.9040 - val_categorical_accuracy: 0.1075\n",
+      "Epoch 8/10\n",
+      "54000/54000 [==============================] - 32s 595us/sample - loss: 0.1432 - acc: 0.9464 - categorical_accuracy: 0.1008 - val_loss: 0.2767 - val_acc: 0.9110 - val_categorical_accuracy: 0.0935\n",
+      "Epoch 9/10\n",
+      "54000/54000 [==============================] - 32s 596us/sample - loss: 0.1271 - acc: 0.9533 - categorical_accuracy: 0.1002 - val_loss: 0.2911 - val_acc: 0.9075 - val_categorical_accuracy: 0.0912\n",
+      "Epoch 10/10\n",
+      "54000/54000 [==============================] - 31s 581us/sample - loss: 0.1165 - acc: 0.9565 - categorical_accuracy: 0.0997 - val_loss: 0.3056 - val_acc: 0.9047 - val_categorical_accuracy: 0.1028\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_17 (Conv2D)           (None, 27, 27, 32)        160       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_16 (MaxPooling (None, 13, 13, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 13, 13, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_15 (Flatten)         (None, 5408)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_57 (Dense)             (None, 128)               692352    \n",
+      "_________________________________________________________________\n",
+      "dense_58 (Dense)             (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 693,802\n",
+      "Trainable params: 693,802\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer = \"adam\", loss = \"sparse_categorical_crossentropy\", metrics = [\"accuracy\",\"categorical_accuracy\"])\n",
+    "model_history = model.fit(x_train_norm, y_train, epochs = 10, validation_split = 0.1, batch_size = 32)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer = \"adam\", loss = \"sparse_categorical_crossentropy\", metrics = [\"accuracy\",\"categorical_accuracy\"])\n",
-    "model_history = model.fit(x_train_keras, y_train, epochs = 10, validation_split = 0.1, batch_size = 32)\n",
-    "model.summary()"
+    "plot_history(model_history)\n",
+    "save_model(model, \"model\")\n",
+    "model.evaluate(x_test_keras, y_test)"
    ]
   },
   {
@@ -1130,6 +1206,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rather than performing the operations on your entire image dataset in memory, the API is designed to be iterated by the deep learning model fitting process, creating augmented image data for you just-in-time. This reduces your memory overhead, but adds some additional time cost during model training.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -1140,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,10 +1237,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_r[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_r = aug.flow(x_train.reshape(60000, 28, 28, 1))\n",
+    "# plt.imshow(x_r[0][0], cmap = \"Greys\")\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "apply_transform() missing 1 required positional argument: 'transform_parameters'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-188-89f30c197eed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_r\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maug\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train_norm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: apply_transform() missing 1 required positional argument: 'transform_parameters'"
+     ]
+    }
+   ],
+   "source": [
+    "x_r = aug.apply_transform(x_train_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ImageDataGenerator' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-178-af50de94364c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_r\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ImageDataGenerator' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "datagen.fit(x_train)\n",
+    "\n",
+    "# fits the model on batches with real-time data augmentation:\n",
+    "model.fit_generator(datagen.flow(x_train, y_train, batch_size=32),\n",
+    "                    steps_per_epoch=len(x_train) / 32, epochs=epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keras wants image x channel so need to add fourth dimension\n",
+    "x_train_norm = min_max_scaling(x_train).reshape(x_train.shape[0], x_train.shape[1], x_train.shape[2], 1)\n",
+    "x_test_norm = min_max_scaling(x_test).reshape(x_test.shape[0], x_test.shape[1], x_test.shape[2], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_norm.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# assuming the input here is a grayscale image (so a sequence of 2D pixel values)\n",
+    "def min_max_scaling(x):\n",
+    "    mmScaler = MinMaxScaler()\n",
+    "    x_norm = mmScaler.fit_transform(x.reshape(x.shape[0], -1).astype(\"float64\")).reshape(x.shape)\n",
+    "    return x_norm"
+   ]
   },
   {
    "cell_type": "markdown",
